--- a/piezassastrehtml/pieza_sastre_2.html
+++ b/piezassastrehtml/pieza_sastre_2.html
@@ -27,15 +27,22 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Cuchara Dan</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          La cuillère Dan es una escultura ceremonial de gran prestigio en la cultura Dan (Côte d’Ivoire y Liberia), símbolo de hospitalidad, generosidad y estatus femenino. No es un utensilio común, sino un objeto ritual y social altamente valorado.
         </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Las cuillères Dan, también llamadas wakemia o wunkirmian, son otorgadas a mujeres destacadas por su generosidad y habilidad para organizar banquetes comunitarios. Son consideradas insignias de honor, comparables a los cetros de autoridad masculina.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+         La mujer que recibe una cuillère Dan es llamada Wunkirle, y se distingue por tener “el corazón en la mano”. La cuillère se convierte en una escultura ambulante, un objeto que encarna valores éticos y sociales. Su diseño puede ser audaz, con formas antropomorfas o abstractas, y su manipulación durante las ceremonias refuerza su poder simbólico
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Costa de Marfil y Liberia</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
