--- a/piezascascohtml/pieza_casco1.html
+++ b/piezascascohtml/pieza_casco1.html
@@ -27,15 +27,26 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Casco Dogón</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Este casco ritual Dogon es una pieza poderosa y simbólicamente cargada, representativa del arte ceremonial del pueblo Dogon de Malí. Su estructura vertical, los cuernos retorcidos y el rostro estilizado lo sitúan dentro del universo de las máscaras de iniciación y protección espiritual, utilizadas en contextos de danza, cosmología y culto ancestral.
+         
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Cuernos retorcidos con mechones de fibra: Posible alusión a animales míticos o fuerzas sobrenaturales. En la cosmología Dogon, los cuernos representan poder, fertilidad y conexión con el mundo espiritual.
+
+Rostro geométrico y simétrico: Nariz prominente, ojos marcados, boca contenida. Transmite solemnidad y vigilancia.
+
+Pátina ritual: Superficie desgastada que indica uso ceremonial o envejecimiento intencional.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         En la cosmología Dogon, cada elemento visual tiene un significado profundo. Los cuernos pueden representar el chacal, el antílope o incluso el Nommo, ser mítico que trajo el conocimiento al mundo. Este casco, por su dramatismo formal y riqueza simbólica, podría haber sido usado en rituales de alto rango, donde el portador no solo representa, sino encarna una fuerza espiritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera y cuerno</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
