--- a/piezasbroncehtml/pieza_bronce2.html
+++ b/piezasbroncehtml/pieza_bronce2.html
@@ -27,15 +27,33 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Recipiente bronce Dogón</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Los Dogon son conocidos por su compleja cosmología y por una rica tradición escultórica tanto en madera como en metal. Este tipo de recipiente está vinculado a:
+
+Culto ancestral doméstico: Usado para contener ofrendas, semillas, líquidos sagrados o elementos de adivinación.
+
+Objetos de linaje o sacerdotales: Asociados a figuras de autoridad espiritual o a la transmisión de conocimiento.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Los Dogon son conocidos por su compleja cosmología y por una rica tradición escultórica tanto en madera como en metal. Este tipo de recipiente está vinculado a:
+
+Culto ancestral doméstico: Usado para contener ofrendas, semillas, líquidos sagrados o elementos de adivinación.
+
+Objetos de linaje o sacerdotales: Asociados a figuras de autoridad espiritual o a la transmisión de conocimiento.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Recipiente de ofrendas o libaciones: Actúa como canal entre el mundo visible y el invisible.
+
+Objeto de culto doméstico o comunitario: Puede estar presente en altares familiares o en espacios de iniciación.
+
+Símbolo de cosmología Dogon: La figura superior y los soportes humanos evocan la estructura del universo según la mitología Dogon.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
