--- a/piezasestatuahtml/pieza_estatua31.html
+++ b/piezasestatuahtml/pieza_estatua31.html
@@ -27,15 +27,23 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua 1 del siglo XX a.d.c.</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Estatua Bambara Mamanecu</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          La escultura Bambara que compartiste muestra una figura femenina completa en la parte inferior (cuerpo y cabeza), y sobre ella se eleva una segunda cabeza, creando una estructura vertical de gran carga simbólica.Los Bambara celebran la maternidad como principio vital y espiritual. Las figuras femeninas como la “Mamanecu” (nombre posiblemente derivado de maman écu, o madre protectora) encarnan la madre idealizada, protectora del linaje, transmisora de sabiduría y fuente de fertilidad.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Figura femenina inferior: Representa la madre ancestral, fuente de fertilidad, nutrición y continuidad del linaje. Su cuerpo y rostro son el fundamento terrenal.
+
+Cabeza superior: Añadida sobre la primera, simboliza la dimensión espiritual o la sabiduría ancestral que guía a la mujer y su descendencia. Es un recurso visual para mostrar que la maternidad no es solo biológica, sino también espiritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          En la cosmología Bambara, la mujer es el principio vital y la mediadora entre mundos. La doble cabeza refuerza la idea de que la maternidad no solo sostiene la vida física, sino que también conecta con los ancestros y el mundo invisible. Es una metáfora visual de la doble dimensión de la existencia: terrenal y espiritual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
