--- a/piezasmascarahtml/pieza_mascara15.html
+++ b/piezasmascarahtml/pieza_mascara15.html
@@ -27,15 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Bamileke</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+        Los Bamileke son conocidos por sus elaboradas máscaras ceremoniales, utilizadas en contextos de danza, funerales reales, celebraciones de linaje y rituales de poder. Las máscaras con múltiples rostros o figuras superpuestas suelen representar espíritus ancestrales colectivos, entidades protectoras o manifestaciones del poder real.
         </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+        Rostro principal expresivo: Ojos saltones, boca abierta, expresión intensa que transmite energía ritual.
+
+Figura superior con múltiples cabezas: Posible representación de espíritus ancestrales, multiplicidad de voces o vigilancia espiritual.
+
+Cordón o cuerda enrollada: Elemento simbólico que puede aludir a la conexión entre mundos o a la contención del poder.
+
+Talla en madera con pátina ritual: Superficie envejecida que sugiere uso ceremonial o envejecimiento intencional.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+      En la cosmología Bamileke, las máscaras no son simples retratos: son manifestaciones vivas del poder invisible. Las figuras múltiples pueden representar la sabiduría acumulada de los ancestros, la vigilancia de los espíritus o la multiplicidad de roles sociales. Esta pieza, por su complejidad, podría haber sido usada por una sociedad secreta o en ceremonias de alto rango.
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Camerún</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
