--- a/piezasmascarahtml/pieza_mascara28.html
+++ b/piezasmascarahtml/pieza_mascara28.html
@@ -27,15 +27,28 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200"><Menu:c>Máscara Bambara</Menu:c></h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Esta máscara se alinea claramente con la tradición Bambara (Bamana) de Malí, una de las culturas más ricas en el uso de máscaras rituales en África occidental. Su diseño vertical, los cuernos estilizados, la simetría geométrica y los elementos decorativos como cauríes y metal sugieren una función ceremonial vinculada a sociedades iniciáticas o de protección espiritual.
         </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Cuernos verticales estilizados: Elemento típico en máscaras Komo o Chi Wara, que representan fuerza, fertilidad o poder espiritual.
+
+Rostro simétrico con ojos rasgados y boca entreabierta: Rasgos estilizados que transmiten vigilancia, sabiduría o energía ritual.
+
+Decoración con cauríes, metal y fibras: Refuerza el carácter ceremonial, con simbolismo de riqueza, protección y conexión ancestral.
+
+Cresta central y elementos laterales: Posible alusión a peinado ritual, jerarquía o atributos animales simbólicos.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+         Las máscaras Bambara no son simples objetos estéticos: son entidades vivas cuando se activan ritualmente. El portador no representa, sino que se convierte en el espíritu que encarna. Esta pieza, por su complejidad y riqueza simbólica, podría haber sido usada en ceremonias de alto rango, donde se invoca la fuerza ancestral para proteger, enseñar o fertilizar.
+        </p>
+
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
