--- a/piezasmascarahtml/pieza_mascara29.html
+++ b/piezasmascarahtml/pieza_mascara29.html
@@ -27,15 +27,26 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Dan "cloche"</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Hay máscaras identificadas como “singer mask” o máscaras de “cantante / danza” Dan que incluyen campanillas de latón (brass bells), unidas con tela, cuero o fibras, que suenan cuando la máscara se mueve. 
+
+
+En algunos casos las campanitas van atadas bajo la barbilla o borde inferior de la máscara, acompañadas de otros adornos (cuentas, conchas, fibras, etc.). 
+
+Este tipo de máscaras no es meramente decorativo: suelen ser máscaras de danza o canto — su función ritual o performativa está asociada al sonido y movimiento, lo que refuerza su simbolismo durante ceremonias, festivales o representaciones.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Para el pueblo Dan, las máscaras representan espíritus — a través de ellas, quien la porta encarna ese espíritu. Los sonidos (campanitas, tambores, pasos) forman parte de la “performance espiritual”: al moverse y sonar, la máscara “cobra vida”.
+        </p>
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          En las danzas populares, tradicionales o ceremoniales, el ritmo sonoro ayuda a marcar pasos, atraer la atención, y enfatizar la manifestación del espíritu — las campanitas añaden un componente auditivo al simbolismo visual.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 30 cm de alto</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Pueblo Dan (Yacouba), Costa de Marfil- Liberia</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
