--- a/piezasmascarahtml/pieza_mascara30.html
+++ b/piezasmascarahtml/pieza_mascara30.html
@@ -27,15 +27,29 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Dogón Telem</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Esta máscara es una pieza excepcional, atribuible con claridad al universo Dogon de Malí, y más específicamente a la tradición Telem, por su estilo arcaico, simetría vertical y el motivo de doble rostro fusionado.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Los Telem fueron los habitantes anteriores a los Dogon en los acantilados de Bandiagara. Aunque su cultura es parcialmente mítica, los Dogon reconocen su legado espiritual.
+
+Esta máscara, con sus dos rostros fusionados, evoca la estética primitiva y simbólica que los Dogon atribuyen a los Telem, especialmente en contextos funerarios y de culto ancestral.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Doble rostro fusionado: Representa la dualidad espiritual, la coexistencia entre el mundo visible e invisible, o entre pasado y presente.
+
+Talla geométrica y sobria: Rasgos reducidos a lo esencial, sin ornamento exuberante, lo que refuerza su carácter arcaico.
+
+Textura y pátina ritual: Superficie desgastada que sugiere uso ceremonial o envejecimiento intencional.
+
+Motivos lineales y verticales: Posible alusión a peinados rituales, escarificaciones o jerarquías espirituales.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
