--- a/piezasmascarahtml/pieza_mascara33.html
+++ b/piezasmascarahtml/pieza_mascara33.html
@@ -27,15 +27,31 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">MASCARA 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Máscara Bambara Komo</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Cresta superior con bandas verticales: Elemento típico en máscaras Komo, que representa fuerza, vigilancia y conexión con el mundo espiritual.
+
+Franja frontal con tachones metálicos: Posible alusión a escarificaciones rituales o símbolos de poder.
+
+Rostro estilizado con nariz prominente y ojos rasgados: Rasgos que transmiten autoridad, introspección y energía ritual.
+
+Orificios laterales: Para fijar la máscara a un traje ceremonial o para colgarla en contextos rituales.
+        </p>
+      <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Máscara de protección espiritual (Komo): Usada en ceremonias de purificación, juicio o defensa contra fuerzas negativas.
+
+Elemento de iniciación masculina (Kore): Enseña disciplina, sabiduría y autocontrol a los jóvenes iniciados.
+
+Objeto de poder: No es decorativo; se considera habitado por una fuerza espiritual durante su activación ritual.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Las máscaras Bambara como esta no son simples esculturas: son entidades vivas cuando se activan en danza, música y ceremonia. El portador no representa, sino que se transforma en el espíritu que encarna. La ornamentación metálica refuerza su carácter de autoridad, y la cresta vertical sugiere conexión con el mundo superior.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Material:</strong> Madera y metal</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
