--- a/piezasmascarahtml/pieza_mascara34.html
+++ b/piezasmascarahtml/pieza_mascara34.html
@@ -28,11 +28,23 @@
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
         <h2 class="text-3xl font-bold mb-4 text-gray-200">Mascara Chokwe (Tschockwe) </h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-         Esta etnia dispone de una variedad de máscaras relacionadas con los ancestros y diferentes usos sociales. El peinado con abundantes trenzas es una característica de estas máscaras. La cruz de malta de la frente es un símbolo tomado de los primeros misioneros portugueses. 
-        </p>
-        
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Los Chokwe son un pueblo del centro-sur de África (Angola, República Democrática del Congo y Zambia), conocido por sus máscaras ceremoniales que representan figuras míticas, ancestros y arquetipos sociales.
+        </p> 
+         <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Rostro tallado en madera oscura: Expresión serena, ojos cerrados, nariz prominente, boca contenida.
 
+Patrón geométrico en la frente y mejillas: Escarificaciones rituales típicas del arte Chokwe.
+
+Cabellera de fibras trenzadas con cauríes: Elemento distintivo que refuerza el estatus espiritual o femenino.
+
+Tufo vegetal en la cúspide: Posible alusión a fertilidad, conexión con la tierra o poder ritual.
+
+Trenzas: Dinamismo en la danza, vínculo con lo ancestral.
+        </p> 
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+        Las máscaras Chokwe no son simples objetos estéticos: son instrumentos de encarnación espiritual. El portador se convierte en el espíritu, y la máscara actúa como mediadora entre el mundo visible y el invisible. Los cauríes refuerzan el vínculo con la fertilidad y la riqueza, mientras que las escarificaciones talladas transmiten identidad y linaje.
+        </p> 
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 30 cm de alto</li>
           <li><strong>Material:</strong> Madera</li>
