--- a/piezassastrehtml/pieza_sastre_10.html
+++ b/piezassastrehtml/pieza_sastre_10.html
@@ -27,15 +27,31 @@
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Taburete de Matrimonio Bambara</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          El taburete de matrimonio Bambara es un objeto ceremonial tallado en madera, ofrecido tradicionalmente a la esposa por la familia del esposo como símbolo de unión, fertilidad y estatus. Es una pieza cargada de significado social y espiritual dentro de la cultura Bambara de Malí.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Talla monoxila: Hecho de una sola pieza de madera, lo que refuerza su carácter ritual.
+
+Cabezas humanas en los extremos: Representan los ancestros, la vigilancia espiritual o la unión de dos linajes.
+
+Motivos geométricos: Esculpidos en el asiento y los laterales, evocan protección, fertilidad y armonía.
+
+Pátina de uso: Superficie oscurecida por el tiempo y el contacto, que indica uso ceremonial auténtico.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Símbolo de unión matrimonial: Representa el vínculo entre dos familias y el inicio de una nueva vida.
+
+Objeto de estatus femenino: La esposa lo conserva como parte de su ajuar espiritual y doméstico.
+
+Elemento de culto doméstico: Puede usarse en rituales de fertilidad, protección o transmisión de linaje.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
-          <li><strong>Tamaño:</strong> 35 cm de alto</li>
-          <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Tamaño:</strong> 15 cm de alto x 50 cm ancho</li>
+          <li><strong>Material:</strong> Madera</li>
+          <li><strong>Origen:</strong> Mali</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
