--- a/piezasbroncehtml/pieza_bronce3.html
+++ b/piezasbroncehtml/pieza_bronce3.html
@@ -15,27 +15,36 @@
   <section class="max-w-7xl mx-auto p-6 mt-8 bg-yellow-50 rounded-2xl shadow-lg">
 
     <!-- Contenedor de imagen y descripción lado a lado con animación al pasar el ratón -->
-    <div class="flex flex-col md:flex-row gap-8">
-
+    <div class="flex flex-col md:flex-row gap-8"> 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/bronces/bronce3.jpeg" class="glightbox">
-          <img src="../mis_fotos/bronces/bronce3.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
+        <a href="../mis_fotos/bronces/bronce3.jpg" class="glightbox">
+          <img src="../mis_fotos/bronces/bronce3.jpg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Cabeza bronce Ogboni</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          Cabeza ritual en bronce atribuible a la tradición Ogboni del pueblo Yoruba (Nigeria). Este tipo de obra se vincula a prácticas de culto ancestral, justicia espiritual y autoridad secreta dentro de la sociedad Ogboni, una de las instituciones más influyentes del mundo yoruba.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          La sociedad Ogboni es una orden secreta de sabios, jueces y guardianes de la moral y la tradición.
+
+Las cabezas en bronce se utilizan como símbolos de poder, memoria ancestral y mediación espiritual.
+
+Estas esculturas suelen formar parte de altares de culto, donde representan a miembros fallecidos o fuerzas tutelares.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify;">
+          En la cosmología yoruba, la cabeza es el centro del destino (Ori). Las esculturas Ogboni en bronce no son retratos, sino contenedores de fuerza espiritual. Los cuernos y las figuras sobre ellos refuerzan la idea de visión múltiple, jerarquía cósmica y presencia ancestral. Esta pieza, por su complejidad formal y riqueza simbólica, sugiere pertenencia a un altar de alto rango, posiblemente vinculado a un linaje importante.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Nigeria</li>
+         <!-- <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
@@ -45,7 +54,7 @@
     <h3 class="text-2xl font-semibold mt-10 mb-4 text-gray-700">Galería Adicional</h3>
     <div class="grid grid-cols-1 gap-6">
     
-      <a href="../mis_fotos/bronces/bronce3_1.jpeg" class="glightbox"><img src="../mis_fotos/bronces/bronce3_1.jpeg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
+      <a href="../mis_fotos/bronces/bronce3_1.png" class="glightbox"><img src="../mis_fotos/bronces/bronce3_1.png" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 2" /></a>
       <a href="mis_fotos/bronces/bronce1_3.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_3.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 3" /></a>
       <a href="mis_fotos/bronces/bronce1_4.jpg" class="glightbox"><img src="mis_fotos/bronces/bronce1_4.jpg" class="rounded-xl shadow-lg max-w-sm mx-auto border-2 border-yellow-700 transition-transform transform hover:scale-105" alt="Pieza bronce foto 4" /></a>
     </div>
