--- a/piezasbroncehtml/pieza_bronce5.html
+++ b/piezasbroncehtml/pieza_bronce5.html
@@ -19,23 +19,52 @@
 
       <!-- Imagen principal a la izquierda con marco decorativo y efecto hover -->
       <div class="md:w-1/2 flex justify-center transition-transform transform hover:scale-105">
-        <a href="../mis_fotos/bronces/bronce5.jpeg" class="glightbox">
-          <img src="../mis_fotos/bronces/bronce5.jpeg" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
+        <a href="../mis_fotos/bronces/bronce5.png" class="glightbox">
+          <img src="../mis_fotos/bronces/bronce5.png" class="rounded-xl shadow-lg w-3/4 border-4 border-yellow-800" alt="Pieza bronce mu bonita" />
         </a>
       </div>
 
       <!-- Descripción a la derecha con fondo, borde, sombra y efecto hover -->
       <div class="md:w-1/2 bg-yellow-900 p-6 rounded-xl shadow-2xl border-4 border-yellow-700 transition-transform transform hover:scale-105">
         <!-- Nombre de la pieza como encabezamiento -->
-        <h2 class="text-3xl font-bold mb-4 text-gray-200">Bronce 1 del siglo XX</h2>
-        <p class="text-lg leading-relaxed mb-4 text-gray-200">
-          Aquí puedes escribir una descripción detallada de la pieza: origen, estilo, procedencia, técnica, materiales, dimensiones, contexto cultural, historia, usos, etc.
+        <h2 class="text-3xl font-bold mb-4 text-gray-200">Placa de bronce del Oba</h2>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Placa rectangular en relieve que muestra cuatro figuras humanas ricamente vestidas.
+
+El personaje central, de mayor tamaño, representa al Oba (rey), portando un cetro o espada ceremonial.
+
+Los acompañantes sostienen escudos, armas y llevan collares de coral, símbolo de poder y pureza.
+
+Detalles minuciosos en vestimenta, tocados, joyería y escarificaciones faciales.
+
+Fondo texturizado con motivos geométricos y simbólicos.
+El Oba es figura divina y política, centro del poder espiritual y terrenal.
+
+Las figuras secundarias representan jefes militares, cortesanos o guardianes reales.
+
+Los collares de coral refuerzan el vínculo con el océano, fuente de poder espiritual en la cosmovisión Edo.
+
+La jerarquía visual (tamaño, posición) comunica autoridad y orden dinástico.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          Estas placas decoraban los muros del palacio real, formando una galería narrativa de la historia dinástica.
+
+Servían para glorificar al Oba, legitimar su poder y educar a los visitantes mediante imágenes codificadas.
+
+Eran activadas por relatos orales y ceremonias cortesanas.
+        </p>
+        <p class="text-lg leading-relaxed mb-4 text-gray-200" ; style="text-align: justify">
+          El Reino de Benín fue uno de los más sofisticados de África Occidental entre los siglos XV y XIX.
+
+Los bronces de Benín son considerados cimas del arte africano clásico, por su técnica y simbolismo.
+
+En 1897, una expedición británica saqueó el palacio real, dispersando cientos de placas por museos europeos y americanos.
         </p>
         <ul class="list-disc pl-5 text-gray-200">
           <li><strong>Tamaño:</strong> 35 cm de alto</li>
           <li><strong>Material:</strong> Bronce</li>
-          <li><strong>Origen:</strong> Región Yoruba, siglo XIX</li>
-          <li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>
+          <li><strong>Origen:</strong> Edo (Reino de Benín), Nigeria</li>
+          <!--<li><strong>Otros detalles:</strong> Decoraciones tradicionales grabadas a mano</li>-->
         </ul>
       </div>
 
